plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        // exclude LOGBACK
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

compileJava {
    options.compilerArgs += [
            '--enable-preview',
    ]
}

compileTestJava {
    options.compilerArgs += [
            '--enable-preview',
    ]
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}
